[tool.poetry]
name = "tw-api"
version = "0.1.0"
description = ""
authors = ["Sakurai <K.Sakurai_2000@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.19.0"
tweepy = "^3.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
