[tool.poetry]
name = "tw-api"
version = "0.2.0"
description = ""
authors = ["Sakurai <K.Sakurai_2000@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.19.0"
tweepy = "4.0.1"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
